# rp2040-freertos-cpp-starter

./: CMakeLists.txt  LICENSE  README.md  flash.py
src/: CMakeLists.txt  main.cpp
